swiper and fontaesome libraries added

--- a/index.html
+++ b/index.html
@@ -3,16 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- swiper js css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <!-- custom css -->
     <link rel="stylesheet" href="./style.css">
     <title>Filtering App</title>
 </head>
 <body>
 
+    <header>
+        <h1>Property Search</h1>
+    </header>
 
+    <!-- filters -->
+    <div class="filter-container">
 
+        <!-- location -->
+        <div class="filter"></div>
 
+        <!-- bedrooms -->
+        <div class="filter"></div>
 
+        <!-- bathrooms -->
+        <div class="filter"></div>
+
+        <!-- price min -->
+        <div class="filter"></div>
+
+        <!-- price max -->
+        <div class="filter"></div>
+    </div>
+
+    <!-- results grid div -->
+    <div class="results" id="results"></div>
+
+    <!-- modal TO BE DONE -->
+
+    <!-- swiper js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/ff75b7e563.js" crossorigin="anonymous"></script>
     <!-- custom js -->
     <script src="./script.js"></script>
 </body>
