--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
                 <option value="Bay of Plenty">Bay of Plenty</option>
                 <option value="Gisborne">Gisborne</option>
                 <option value="Hawkes Bay">Hawkes Bay</option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
-                <option value=""></option>
+                <option value="Marlborough">Marlborough</option>
+                <option value="Wellington">Wellington</option>
+                <option value="Nelson">Nelson</option>
+                <option value="Canterbury">Canterbury</option>
+                <option value="Otago">Otago</option>
+                <option value="West Coast">West Coast</option>
+                <option value="Manawatu">Manawatu</option>
+                <option value="Taranaki">Taranaki</option>
             </select>
         </div>
 
@@ -113,7 +112,7 @@
 
 
 
-    
+
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- font awesome -->
