did more css and js -  modals and sorting

--- a/index.html
+++ b/index.html
@@ -104,12 +104,18 @@
     </div>
     <!-- end filter container -->
 
+    <h2 class="sorting-text">Results Sorted by Lowest Price to Highest Price by Default</h2>
 
     <!-- results grid div -->
     <div class="results" id="results"></div>
 
     <!-- modal TO BE DONE -->
-
+    <dialog id="detailsModal">
+        <button id="closeModal"> <i class="fa-solid fa-xmark"></i></button>
+        <div class="modal-contents">
+            <!-- js population -->
+        </div>
+    </dialog>
 
 
 
