modal, sorting buttons, scroll lock

--- a/index.html
+++ b/index.html
@@ -104,7 +104,16 @@
     </div>
     <!-- end filter container -->
 
-    <h2 class="sorting-text">Results Sorted by Lowest Price to Highest Price by Default</h2>
+    <!-- sorting buttons -->
+        <div class="sorting-container">
+            <p>Sorting Options</p>
+            <div class="sorting-btn-container">
+                <button class="sorting-button" id="priceHighToLow">$$$ - $</button>
+                <button class="sorting-button" id="priceLowToHigh">$ - $$$</button>
+                <button class="sorting-button" id="alphabeticalButton">A - Z</button>
+            </div>
+        </div>
+    <!-- end sorting options -->
 
     <!-- results grid div -->
     <div class="results" id="results"></div>
